@startuml
left to right direction

abstract class BasePizza {
    #String name
    +void setName(String name)
    +{abstract} void prepare()
    +void bake()
    +void cut()
    +void box()
}

class BeijingCheesePizza {}
class BeijingPepperPizza {}
class LondonCheesePizza {}
class LondonPepperPizza {}

BasePizza <|-- BeijingCheesePizza
BasePizza <|-- BeijingPepperPizza
BasePizza <|-- LondonCheesePizza
BasePizza <|-- LondonPepperPizza

abstract class BaseOrderPizza {
    +{abstract} BasePizza createPizza(String orderType)
}

class BeijingOrderPizza {}
BeijingOrderPizza ..> BeijingCheesePizza
BeijingOrderPizza ..> BeijingPepperPizza

class LondonOrderPizza {}
LondonOrderPizza ..> LondonCheesePizza
LondonOrderPizza ..> LondonPepperPizza

BaseOrderPizza <|-- BeijingOrderPizza
BaseOrderPizza <|-- LondonOrderPizza
@enduml
